<resources>
    <string name="app_name">Maps: Destination distance and time</string>
    <string name="title_activity_maps">Maps: Destination distance and time</string>
    <string name="add_location_txt">Add Location</string>
    <string name="add_txt">Add Location</string>
    <string name="delete_location_txt">Delete Location</string>
    <string name="street_number_txt">Street Number:</string>
    <string name="street_name_txt">Street Name:</string>
    <string name="set_name_to_address">Set Name to Address:</string>
    <string name="city">City:</string>
    <string name="province">Province:</string>
    <string name="delete_desired_location">Delete Desired Location:</string>
    <string name="cancel">Cancel</string>
</resources>
