<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:text="@string/street_number_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/strNum_id" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal|numberSigned"
        android:text=""
        android:ems="10"
        android:id="@+id/insert_street_num" />

    <TextView
        android:text="@string/street_name_txt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/strName_id" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text=""
        android:ems="10"
        android:id="@+id/insert_street_name" />

    <TextView
        android:text="@string/city"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/city_id" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text=""
        android:ems="10"
        android:id="@+id/insert_city" />

    <TextView
        android:text="@string/province"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/province_id" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text=""
        android:ems="10"
        android:id="@+id/insert_province" />

    <TextView
        android:text="@string/set_name_to_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/nameOfAddress_id" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text=""
        android:ems="10"
        android:id="@+id/insert_name_address" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="339dp">

        <Button
            android:text="@string/add_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/add_btn"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="58dp" />

        <Button
            android:text="@string/cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/add_btn"
            android:layout_marginTop="22dp"
            android:id="@+id/cancel_btn"
            android:layout_alignLeft="@+id/add_btn"
            android:layout_alignStart="@+id/add_btn"
            android:layout_alignRight="@+id/add_btn"
            android:layout_alignEnd="@+id/add_btn" />
    </RelativeLayout>

</LinearLayout>