<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:text="@string/delete_location_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:id="@+id/delete_location_btn" />

        <TextView
            android:text="@string/delete_desired_location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/delete_id"
            android:layout_marginTop="39dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/location_spinner"
            android:layout_marginTop="33dp"
            android:layout_below="@+id/delete_id"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <Button
            android:text="@string/cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="37dp"
            android:id="@+id/cancel_btn"
            android:layout_below="@+id/delete_location_btn"
            android:layout_alignLeft="@+id/delete_location_btn"
            android:layout_alignStart="@+id/delete_location_btn"
            android:layout_alignRight="@+id/delete_location_btn"
            android:layout_alignEnd="@+id/delete_location_btn" />
    </RelativeLayout>

</LinearLayout>